# RottenBot_AuthService

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  info.txt  pyproject.toml
.github/workflows/: ci.yaml
src/: config.py  main.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  setup_observability.py  utils.py
src/db/: main.py  redis.py
src/rotten_bot_signup/: __init__.py
